# dashboard

./: .env  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  hello.py  pyproject.toml  requirements.txt  simple_inference.py
.github/workflows/: deploy.yml
assets/: styles.css
dashboard/: dashboard.py  styles.py
dashboard/backend/: __init__.py  flood_prediction.py  gee_data.py  inference.py  weather_service.py  weather_state.py
dashboard/components/: __init__.py  filter_city.py  filter_sidebar.py  maps.py  navbar.py  sidebar.py  weather_card.py
dashboard/data/: flood_inference_data.csv
dashboard/layout/: __init__.py  map_form.py
dashboard/models/: lstm_smote_cv.h5  random_forest_model.joblib  robust_scaler.pkl  standard_scaler.pkl
dashboard/pages/: __init__.py  dashboard.py  floodsense.py  index.py
dashboard/templates/: template.py
dashboard/test/: test_api.py  test_flood_model.py
dashboard/views/: map_display.py
