[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.19.6",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "reflex>=0.7.12",
    "tensorflow>=2.19.0",
    "requests>=2.32.3",
    "python-dotenv>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
