[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.19.6",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "reflex>=0.7.12",
    "tensorflow>=2.15.0",
    "requests>=2.32.3",
    "python-dotenv>=1.1.0",
    "earthengine-api>=1.5.19",
    "pandas>=2.3.0",
    "isort>=6.0.1",
    "scikit-learn>=1.7.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
